# mh6301_info_retrieval

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  index.py  pyproject.toml  requirements.txt
backend/mappings/: business.json  checkin.json  review.json  tip.json  user.json
data/: DATASET.md  yelp_academic_dataset_business.json
frontend/: Dockerfile  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
frontend/src/components/: _debounce.tsx  _geosearch.tsx  _hits.tsx  _mapsloader.tsx  _navbar.tsx  _rangeslider.tsx  _refinementlist.tsx  _searchbox.tsx
frontend/src/pages/: _app.tsx  _hits.tsx  index.tsx
frontend/src/pages/api/: search.ts
frontend/src/types/: react-instantsearch-dom-maps.d.ts
