[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Loc Nguyen <vinhloc30796@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.16.18"
elasticsearch = "^8.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
